# CMakeLibraries

./: Dockerfile  LICENSE  README.md  docker-compose.yaml
src/myLib/: CMakeLists.txt  myLibConfig.cmake
src/myLib/include/: myLib.hpp
src/myLib/src/: myLib.cpp
src/myLib/test/: demo.cpp
src/unrelated_project/: CMakeLists.txt  main.cpp
